# openhoof

./: .gitignore  OVERHAUL_PLAN.md  README.md  llamafarm.yaml  pyproject.toml
docs/: AGENTS.md  API.md  ARCHITECTURE.md  GETTING_STARTED.md  LLAMAFARM.md  TOOLS.md  TRIGGERS.md
examples/basic-agent/: SOUL.md
examples/fuel-analyst/: SOUL.md
examples/orchestrator/: SOUL.md
experiments/: test_function_pipeline.py  test_pipeline_direct.py
integrations/: atmosphere_client.py  horizon_integration.py  medical_wing_integration.py
openhoof/: __init__.py  __main__.py  config.py
openhoof/agents/: __init__.py  autonomy_loop.py  heartbeat.py  lifecycle.py  subagents.py
openhoof/api/: __init__.py  app.py  dependencies.py
openhoof/api/routes/: activity.py  agents.py  approvals.py  chat.py  health.py  logs.py  tools.py  training.py  triggers.py
openhoof/cli/: __init__.py  main.py
openhoof/core/: __init__.py  events.py  hot_state.py  sensors.py  sessions.py  transcripts.py  workspace.py
openhoof/inference/: __init__.py  adapter.py  function_pipeline.py  llamafarm.py  mlx_router.py  tool_router.py
openhoof/tools/: __init__.py  base.py  registry.py
openhoof/tools/builtin/: __init__.py  configure_agent.py  exec.py  list_agents.py  memory.py  notify.py  shared.py  spawn.py  yield_tool.py
openspec/specs/dark-mode/: spec.md
openspec/specs/hot-state/: spec.md
openspec/specs/sensors/: spec.md
tests/: __init__.py  conftest.py  test_api.py  test_autonomy_integration.py  test_autonomy_loop.py  test_builder_integration.py  test_builder_provisioning.py  test_configure_agent.py  test_events.py  test_hot_state.py  test_list_agents.py  test_sensors.py  test_sessions.py  test_tools.py  test_transcripts.py  test_workspace.py  test_yield_tool.py
training/: README.md  pipeline.py  requirements-linux.txt  requirements-mac.txt  setup.sh  train_tool_router.py
ui/: next.config.js  package-lock.json  package.json  tailwind.config.js
ui/app/: layout.tsx  page.tsx
ui/app/activity/: page.tsx
ui/app/agents/: page.tsx
ui/app/approvals/: page.tsx
ui/app/tools/: page.tsx
(+23 files in other folders)
